# GVirtuS

./: CMakeLists.txt  README.md
cmake/: GVirtuS.cmake
etc/: properties.json
include/gvirtus/common/: JSON.h
include/gvirtus/communicators/: EndpointFactory.h  Endpoint_Tcp.h
plugins/cublas/: CMakeLists.txt
plugins/cublas/backend/: CublasHandler.h
plugins/cublas/frontend/: CublasFrontend.h
plugins/cudart/: CMakeLists.txt
plugins/cudart/backend/: CudaRtHandler.cpp  CudaRtHandler.h  CudaRtHandler_internal.cpp
plugins/cudart/demo/: CMakeLists.txt  README.md  add_grid.e  dummy0.e  launchKernel.e  matrixMul.e
plugins/cudart/frontend/: CudaRt_internal.cpp
plugins/cudnn/: CMakeLists.txt
plugins/cudnn/backend/: CudnnHandler.cpp  CudnnHandler.h
plugins/cudnn/frontend/: Cudnn.cpp
plugins/cufft/: CMakeLists.txt
plugins/curand/: CMakeLists.txt
src/backend/: Backend.cpp  main.cpp
